kubernetes/applications/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ntfy
