kubernetes/applications/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Notifications
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: ntfy.png
    gethomepage.dev/name: ntfy
spec:
  ingressClassName: cilium
  rules:
    - host: ntfy.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  name: http
  tls:
    - hosts:
        - ntfy.costanza.cloud
      secretName: ntfy-tls
