kubernetes/applications/ntfy/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  annotations:
    gethomepage.dev/description: Notifications
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: ntfy.png
    gethomepage.dev/name: ntfy
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
spec:
  hostnames:
    - ntfy.costanza.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ntfy
          namespace: ntfy
          port: 80
